# chip-8

./: .gitignore  CMakeLists.txt  README.md  audio.c  audio.h  cpu.c  cpu.h  display.c  display.h  main.c
.github/workflows/: run-tests.yml
tests/: test_cpu.c  test_cpu.h  test_display.c  test_flow_control.c  test_input.c  test_memory.c  test_random.c  test_registers.c  test_timers.c
